fixes chat being right aligned fixes token not being set

--- a/httpdocs/style.less
+++ b/httpdocs/style.less
@@ -367,7 +367,6 @@ input {
     }
 
     .prompt-text {
-      text-align: right;
       .prompt-text-info {
         color: @color-3;
         font-weight: 500;
